<resources>
    <string name="app_name">Pulse Play</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User 123</string>
    <string name="nav_header_subtitle">user.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_play">Play</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page_line">Explore sports</string>
    <string name="sport1">Football</string>
    <string name="sport2">Cricket</string>
    <string name="sport3">Volleyball</string>
    <string name="sport4">Marathon</string>
    <string name="sport6">Badminton</string>
    <string name="famous_places">Famous places near your area</string>
    <string name="football_pitch_noida">Football Arena, Noida</string>
    <string name="desc_play_fragment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rut</string>
    <string name="football_pitch_noida_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam rutrum odio dui, auctor sagittis justo posuere vitae. Curabitur odio dui, faucibus et congue a, maximus ut ipsum. Sed eget dapibus nunc. Morbi sit amet cursus risus. Sed blandit tempus nulla, ut interdum neque blandit facilisis. Donec in odio tempor, sollicitudin risus nec, sollicitudin lectus. Donec tincidunt nibh ut consequat egestas. Donec commodo iaculis nulla. Pellentesque mollis, leo sed porta varius, lorem tellus pretium lectus, at porta leo felis nec velit. Suspendisse aliquet, urna vel pellentesque auctor, odio risus suscipit risus, at viverra nunc sapien id metus. Duis dui tortor, egestas quis feugiat vel, dictum quis mauris. Donec scelerisque varius nisi ac cursus. Phasellus ac accumsan turpis. Fusce ac tempor arcu. Praesent pulvinar eget ligula a ornare.</string>
    <string name="table_tennis_faridabad">Unified Table Tennis, Faridabad</string>
    <string name="tennis_delhi">DDA Cricket Ground, Delhi</string>
    <string name="looking_for_company">Looking for companion?</string>
    <string name="host_sport">Host for companion</string>
    <string name="book">Book</string>
    <string name="join_sport">Join as companion</string>
    <string name="join">Join</string>
    <string name="user_name_profile_page">Admin PulsePlay</string>
    <string name="about_this_place">About this place</string>
    <string name="rating_and_reviews">Rating and Reviews</string>
    <string name="pulse_players_near_you">Pulse Players near you</string>
    <string name="volleyball_court_rajnagar">Volleyball Court, Raj Nagar</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="at_sign">\@</string>
    <string-array name="skill_levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Experienced</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>