<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pulseplay.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_caloriesTrackFragment"
            app:destination="@id/caloriesTrackFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_play"
        android:name="com.example.pulseplay.ui.play.PlayFragment"
        android:label="@string/menu_play"
        tools:layout="@layout/fragment_play" >
        <action
            android:id="@+id/action_nav_play_to_bookFragment"
            app:destination="@id/bookFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_play_to_famous1Fragment"
            app:destination="@id/famous1Fragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_play_to_famous2Fragment"
            app:destination="@id/famous2Fragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_play_to_famous3Fragment"
            app:destination="@id/famous3Fragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_play_to_joinFragment"
            app:destination="@id/joinFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_play_to_playFootballFragment"
            app:destination="@id/playFootballFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pulseplay.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_profile_to_myActivitesFragment"
            app:destination="@id/myActivitesFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pulseplay.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/caloriesTrackFragment"
        android:name="com.example.pulseplay.ui.trackcalories.CaloriesTrackFragment"
        android:label="Track your calories" >
        <action
            android:id="@+id/action_caloriesTrackFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/bookFragment"
        android:name="com.example.pulseplay.ui.companion.BookFragment"
        android:label="Book your sport"
        tools:layout="@layout/fragment_book" >
        <action
            android:id="@+id/play_btn_action_bookFragment_to_successfulBookingFragment"
            app:destination="@id/successfulBookingFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/cancel_btn_action_bookFragment_to_nav_play"
            app:destination="@id/nav_play"
            app:enterAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/successfulBookingFragment"
        android:name="com.example.pulseplay.ui.companion.SuccessfulBookingFragment"
        android:label="Payment Successful"
        tools:layout="@layout/fragment_successful_booking" />
    <fragment
        android:id="@+id/famous1Fragment"
        android:name="com.example.pulseplay.ui.places.Famous1Fragment"
        android:label=""
        tools:layout="@layout/fragment_famous1" >
        <action
            android:id="@+id/action_famous1Fragment_to_bookFragment"
            app:destination="@id/bookFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous1Fragment_to_buyFragment"
            app:destination="@id/buyFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous1Fragment_to_rentFragment"
            app:destination="@id/rentFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/famous2Fragment"
        android:name="com.example.pulseplay.ui.places.Famous2Fragment"
        android:label=""
        tools:layout="@layout/fragment_famous2" >
        <action
            android:id="@+id/action_famous2Fragment_to_bookFragment"
            app:destination="@id/bookFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous2Fragment_to_rentFragmentTableTennis"
            app:destination="@id/rentFragmentTableTennis"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous2Fragment_to_buyFragmentTableTennis"
            app:destination="@id/buyFragmentTableTennis"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/famous3Fragment"
        android:name="com.example.pulseplay.ui.places.Famous3Fragment"
        android:label=""
        tools:layout="@layout/fragment_famous3" >
        <action
            android:id="@+id/action_famous3Fragment_to_bookFragment"
            app:destination="@id/bookFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous3Fragment_to_rentFragmentCricket"
            app:destination="@id/rentFragmentCricket"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_famous3Fragment_to_buyFragmentCricket"
            app:destination="@id/buyFragmentCricket"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pulseplay.ui.loginsignup.LoginFragment"
        android:label="Log in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_signinFragment"
            app:destination="@id/signinFragment"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_loginFragment_to_preferencesFragment2"
            app:destination="@id/preferencesFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/signinFragment"
        android:name="com.example.pulseplay.ui.loginsignup.SigninFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_signin" >
        <action
            android:id="@+id/action_signinFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/joinFragment"
        android:name="com.example.pulseplay.ui.companion.JoinFragment"
        android:label="Join"
        tools:layout="@layout/fragment_join" />
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.example.pulseplay.ui.loginsignup.PreferencesFragment"
        android:label="Preferences"
        tools:layout="@layout/fragment_preferences" >
        <action
            android:id="@+id/action_preferencesFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/playFootballFragment"
        android:name="com.example.pulseplay.ui.play.PlayFootballFragment"
        android:label="Learn Football"
        tools:layout="@layout/fragment_play_football" />
    <fragment
        android:id="@+id/myActivitesFragment"
        android:name="com.example.pulseplay.ui.profile.MyActivitesFragment"
        android:label="Recent Activities"
        tools:layout="@layout/fragment_my_activites" >
        <action
            android:id="@+id/action_myActivitesFragment_to_chatCompanionFragment"
            app:destination="@id/chatCompanionFragment"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/chatCompanionFragment"
        android:name="com.example.pulseplay.ui.profile.ChatCompanionFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat_companion" />
    <fragment
        android:id="@+id/buyFragment"
        android:name="com.example.pulseplay.ui.buyrent.BuyFragment"
        android:label="Buy"
        tools:layout="@layout/fragment_buy" />
    <fragment
        android:id="@+id/rentFragment"
        android:name="com.example.pulseplay.ui.buyrent.RentFragment"
        android:label="Rent"
        tools:layout="@layout/fragment_rent" />
    <fragment
        android:id="@+id/rentFragmentTableTennis"
        android:name="com.example.pulseplay.ui.buyrent.RentFragmentTableTennis"
        android:label="Rent"
        tools:layout="@layout/fragment_rent_table_tennis" />
    <fragment
        android:id="@+id/buyFragmentTableTennis"
        android:name="com.example.pulseplay.ui.buyrent.BuyFragmentTableTennis"
        android:label="Buy"
        tools:layout="@layout/fragment_buy_table_tennis" />
    <fragment
        android:id="@+id/buyFragmentCricket"
        android:name="com.example.pulseplay.ui.buyrent.BuyFragmentCricket"
        android:label="Buy"
        tools:layout="@layout/fragment_buy_cricket" />
    <fragment
        android:id="@+id/rentFragmentCricket"
        android:name="com.example.pulseplay.ui.buyrent.RentFragmentCricket"
        android:label="Rent"
        tools:layout="@layout/fragment_rent_cricket" />
</navigation>